Updated Axios in package-lock.json due to security vulnerability

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm link box-skills-kit-nodejs/skills-kit-library;"
+    "postinstall": [
+      "npm link box-skills-kit-nodejs/skills-kit-library;"
+    ]
   },
   "author": "Joe Norman",
   "license": "MIT-0",
   "dependencies": {
     "aws-sdk": "^2.292.0",
-    "axios": "^0.18.0"
+    "axios": ">=0.21.1"
   }
 }
